<resources>
    <string name="app_name">FootBall Match Tracker</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="reset">Reset</string>
    <string name="_0">0</string>
    <string name="substitutes_0">Substitutes: 0</string>
    <string name="fouls_0">Fouls: 0</string>
    <string name="goal">GOAL</string>
    <string name="foul">FOUL</string>
    <string name="substitute">SUBSTITUTE</string>
</resources>
