<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_a"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp"

                />

            <TextView
                android:id="@+id/team_a_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_a_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/fouls_0"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_a_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/substitutes_0"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp" />


            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"

                android:layout_marginTop="16dp"
                android:onClick="goalTeamA"
                android:padding="8dp"
                android:text="@string/goal"
                android:textAlignment="center"
                tools:ignore="OnClick" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:onClick="foulA"
                android:padding="8dp"
                android:text="@string/foul"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:onClick="subA"
                android:padding="8dp"
                android:text="@string/substitute"
                android:textAlignment="center" />

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="88dp"
            android:background="#777"

            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="16dp"

            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/team_b"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="56sp" />

            <TextView
                android:id="@+id/team_b_foul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/fouls_0"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/team_b_sub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                android:fontFamily="sans-serif-black"
                android:text="@string/substitutes_0"
                android:textAlignment="center"
                android:textColor="#616161"
                android:textSize="14sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:onClick="goalTeamB"
                android:padding="8dp"
                android:text="@string/goal"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:onClick="foulB"
                android:padding="8dp"
                android:text="@string/foul"
                android:textAlignment="center" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:layout_marginTop="16dp"
                android:onClick="subB"
                android:padding="8dp"
                android:text="@string/substitute"
                android:textAlignment="center" />

        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/reset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginBottom="32dp"
        android:onClick="reset"
        android:padding="8dp"
        android:text="@string/reset" />
</RelativeLayout>